beginning a merge with head